--- a/resources/common.css
+++ b/resources/common.css
@@ -1,3 +1,15 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .flex {
   display: flex;
   align-items: center;
