--- a/resources/common.css
+++ b/resources/common.css
@@ -2,6 +2,12 @@ html,
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#app {
+  padding: 0 24px;
 }
 
 .loading {
@@ -42,6 +48,10 @@ body {
 }
 .mb16 {
   margin-bottom: 16px;
+}
+
+.p0 {
+  padding: 0;
 }
 
 .pl8 {
