--- a/resources/common.css
+++ b/resources/common.css
@@ -20,6 +20,7 @@ body {
   display: flex;
   align-items: center;
 }
+
 .jcc {
   justify-content: center;
 }
@@ -27,12 +28,15 @@ body {
 .ml8 {
   margin-left: 8px;
 }
+
 .mt8 {
   margin-top: 8px;
 }
+
 .mr8 {
   margin-right: 8px;
 }
+
 .mb8 {
   margin-bottom: 8px;
 }
@@ -40,12 +44,15 @@ body {
 .ml16 {
   margin-left: 16px;
 }
+
 .mt16 {
   margin-top: 16px;
 }
+
 .mr16 {
   margin-right: 16px;
 }
+
 .mb16 {
   margin-bottom: 16px;
 }
@@ -57,12 +64,15 @@ body {
 .pl8 {
   padding-left: 8px;
 }
+
 .pt8 {
   padding-top: 8px;
 }
+
 .pr8 {
   padding-right: 8px;
 }
+
 .pb8 {
   padding-bottom: 8px;
 }
@@ -70,12 +80,50 @@ body {
 .pl16 {
   padding-left: 16px;
 }
+
 .pt16 {
   padding-top: 16px;
 }
+
 .pr16 {
   padding-right: 16px;
 }
+
 .pb16 {
   padding-bottom: 16px;
+}
+
+.loader {
+  font-size: 20px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-indent: -9999em;
+  animation: load-effect 1s infinite linear;
+}
+
+@keyframes load-effect {
+  0% {
+
+    box-shadow: -3em 2em 0 .5em #FFF, 0 2em 0 0 #FFF, 3em 2em 0 -.5em #FFF;
+  }
+
+  25% {
+    box-shadow: -3em 2em 0 0 #FFF, 0 2em 0 -.5em #FFF, 3em 2em 0 0 #FFF;
+  }
+
+  50% {
+    box-shadow: -3em 2em 0 -0.5em #FFF, 0 2em 0 0 #FFF, 3em 2em 0 .5em #FFF;
+  }
+
+  75% {
+    box-shadow: -3em 2em 0 0 #FFF, 0 2em 0 .5em #FFF, 3em 2em 0 0 #FFF;
+  }
+
+  100% {
+    box-shadow: -3em 2em 0 .5em #FFF, 0 2em 0 0 #FFF, 3em 2em 0 -.5em #FFF;
+  }
 }
