--- a/src/pages/credential-management/ui/index.css
+++ b/src/pages/credential-management/ui/index.css
@@ -49,13 +49,17 @@
 }
 
 .card-body {
+    height: 62px;
     padding: 8px 12px;
+    overflow: scroll;
 }
 
 .info {
     display: inline-block;
     width: 100%;
+    margin-bottom: 6px;
     font-size: 14px;
+    word-wrap: break-word;
 }
 
 .add-btn {
